# CLion_CPP2Python

./: CMakeLists.txt
CallCPPFromPython/: TestingSO_cpp.cpp  TestingSO_py.py  library.cpp  library.h
